Optimized BiomeChecker and Modifier acquisition.
Default Biomes are now Supported.

Version bumped to BETA-0.5.0.